--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Quantum Computing Timeline
 description: A timeline of key events in quantum computing history
-baseurl: "/quantum-computing-timeline"
+baseurl: ""
 url: ""
 theme: jekyll-theme-minimal
