--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -18,3 +18,9 @@
 
 - year: 2019
   event: Google claims to have achieved quantum supremacy with its 53-qubit Sycamore processor.
+
+- year: 2021
+  event: Something goes here.
+
+  - year: 2024
+  event: Testing this page.
